@@ -14,7 +14,7 @@
 <project name="openjump" default="dist-zip" basedir="..">
     <property name="name" value="openjump"/>
     <property name="Name" value="OpenJUMP"/>
-    <property name="version" value="1.5.1rc"/>
+    <property name="version" value="1.5.2alpha"/>
     <!-- The recommended setting for debug is "on", so that line numbers are included in stack traces. [Jon Aquino 2005-04-06] -->
     <property name="debug" value="on"/>
     <property name="deprecation" value="off"/>
@@ -122,7 +122,8 @@
                deprecation="${deprecation}" 
                optimize="${optimize}" 
                target="${targetversion}" 
-               source="${sourceversion}">
+               source="${sourceversion}"
+               includeantruntime="false">
             <classpath refid="base.classpath"/>
         </javac>
         <copy todir="${build.classes}">
