@@ -24,6 +24,7 @@
 	<!--  			menu VIEW 						/-->
 	<!--- ========================================= /-->		
 	<plug-in>org.openjump.core.ui.plugin.edit.CopyBBoxPlugin</plug-in>
+	<plug-in>org.openjump.core.ui.plugin.view.NorthArrowPlugIn</plug-in>
 	<!---  ======================================== /-->
 	<!--  			menu LAYER 						/-->
 	<!--- ========================================= /-->	
