@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Chyb
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = \u017d\u00e1dn\u00e1 data
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Bod
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Strana
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = P\u0159ibl\u00ED\u017Een\u00ED / Odd\u00E1len\u00ED, pomoc\u00ED kole\u010Dka, posun
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Lev\u00E9 tla\u010D\u00EDtko zaji\u0161\u0165uje p\u0159ibl\u00ED\u017Een\u00ED/odd\u00E1len\u00ED, prav\u00E9 pak zru\u0161en\u00ED.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Chyba\: prohl\u00e9dn\u011bte v\u00fdstupn\u00ed okno
