@@ -1105,6 +1105,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Fehl
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = Keine Daten
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Punkt
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Seite
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoomen, Mausrad Zoom, Verschieben
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Linke Maustaste f\u00fcr Zoom, rechte Maustaste zum Abbruch.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Fehler\: bitte im Ausgabefenster schauen
