@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Erro
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = No Data
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Point
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Side
+org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Error\: see output window
