@@ -1098,6 +1098,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window=Error\
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data=Sin datos
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point=Punto
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side=Lado
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window=Error\: vea la Ventana de Salida
