@@ -1102,6 +1102,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Virh
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = Ei tietoja
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Piste
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Sivu
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Virhe. Lis\u00E4tietoja viesti-ikkunassa
