@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Erre
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = Aucune donn\u00e9e
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Point
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Cot\u00e9
+org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = Rose des vents
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Erreur\: voir la fen\u00eatre de sortie
