@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Hiba
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = Nincs adat
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Pont
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Oldal
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Hiba\: l\u00e1sd kimeneti ablak
