@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = \u30
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = \u30c7\u30fc\u30bf\u304c\u3042\u308a\u307e\u305b\u3093
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = \u30dd\u30a4\u30f3\u30c8
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = \u30b5\u30a4\u30c9
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = \u30a8\u30e9\u30fc\: \u51fa\u529b\u30a6\u30a3\u30f3\u30c9\u30fc\u3092\u3054\u89a7\u304f\u3060\u3055\u3044
