@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.EasyButtonsPlugin.EZ-Buttons = T\:EZ-\u0d2c\u0d
 #T:org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = No Data
 #T:org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Point
 #T:org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Side
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 #T:org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Error\: see output window
