@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = Erro
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = Sem dados
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = Ponto
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = Lado
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = Erro\: veja janela de sa\u00edda
