@@ -1089,6 +1089,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = \u0b
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = \u0ba4\u0b95\u0bb5\u0bb2\u0bcd\u0b95\u0bb3\u0bcd \u0b8e\u0ba4\u0bc1\u0bb5\u0bc1\u0bae\u0bcd \u0b87\u0bb2\u0bcd\u0bb2\u0bc8 
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = \u0baa\u0bc1\u0bb3\u0bcd\u0bb3\u0bbf
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = \u0baa\u0b95\u0bcd\u0b95\u0bae\u0bcd
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = \u0baa\u0bbf\u0bb4\u0bc8  \: \u0bb5\u0bc6\u0bb3\u0bbf\u0baf\u0bc0\u0b9f\u0bc1  \u0b9a\u0bbe\u0bb3\u0bb0\u0bae\u0bcd \u0baa\u0bbe\u0bb0\u0bcd\u0b95\u0bcd\u0b95
