@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window=Error:
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data=No Data
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point=Point
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side=Side
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window=Error: see \u0c14\u0c1f\u0c4d\u0c2a\u0c41\u0c1f\u0c4d window
