@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = \u95
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = \u65e0\u6570\u636e
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = \u70b9
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = \u4fa7
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = \u9519\u8bef\uff1a \u770b\u5230\u8f93\u51fa\u7a97\u53e3
