@@ -1106,6 +1106,7 @@ org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Error-See-Output-Window = \u93
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.No-Data = \u7121\u6578\u64da
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Point = \u9ede
 org.openjump.core.ui.plugin.view.MapToolTipPlugIn.Side = \u5074
+#T:org.openjump.core.ui.plugin.view.NorthArrowPlugIn.North-Arrow = North Arrow
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.zoom-pan = Zoom In/Out, wheel zoom, pan
 #T:org.openjump.core.ui.plugin.view.SuperZoomPanTool.wheelmode-message = Left mousebutton do zoom, right do mousebutton cancel.
 org.openjump.core.ui.plugin.view.ShowFullPathPlugIn.Error-See-Output-Window = \u932f\u8aa4\uff1a \u770b\u5230\u8f38\u51fa\u7a97\u53e3
