@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-02-12 mmichaud <michael.michaud@free.fr>
+  * Reactivated the North-Arrow plugin (in view menu)
+
 2012-01-25 sstein <sstein@geo.uzh.ch>
   * adjusted terminology:
     - "Overlay Polygon Layers" to "Polygon Overlay", with the 
